# cBattleship

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CMake/: cotire.cmake
doc/: classdiagramm.uxf  client-statemachine.dot  network-sequence.dot  objectdiagram.uxf  server-statemachine.dot
scripts/: edge-placer-bot  generate-all-packages  generate-network-package  generate-test-case  read_template.py  template.py
scripts/bots/: edge-bot  mogria-bot
scripts/network-package-template/: header-file  member  method-declaration  method-implementation  property-list  source-file
scripts/test-case-template/: header-file  method-declaration  method-implementation  method-registration  source-file
scripts/tests/: edge-bot-test
src/bot-client/: Bot.cpp  Bot.h  BotClient.cpp  BotClient.h  Options.cpp  Process.h  main.cpp
src/client/: BattleFieldUI.cpp  BattleFieldUI.h  CommandCenter.cpp  CommandCenter.h  CommandCenterCombatLog.cpp  CommandCenterCombatLog.h  CommandCenterStatistics.cpp  CommandCenterStatistics.h  CursesWindow.cpp  CursesWindow.h  EnhancedClient.cpp  EnhancedClient.h  GameUI.cpp  GameUI.h  Log.cpp  Log.h  NcursesClient.cpp  NcursesClient.h  UIHandler.h  WinScreenUI.h  main.cpp
src/clientlib/: ClientStateMachine.cpp  ClientStateMachine.h  GameEvents.h  Player.cpp  Player.h  ServerNetworkPackage.cpp  ServerNetworkPackage.h
src/common/: BattleField.cpp  BattleField.h  Connection.cpp  Connection.h  Field.cpp  Field.h  GameConfiguration.cpp  GameConfiguration.h  LogConfig.h  NetworkPackage.proto  NetworkPackageManager.cpp  NetworkPackageManager.h  Player.cpp  Player.h  Position.proto  Ship.cpp  Ship.h  ShipData.proto  conn_id.h  f.cpp  packages.proto  position.cpp  position.h
src/common/communication/: AuthenticatedNetworkPackage.cpp  AuthenticatedNetworkPackage.h  EnemyDisconnectedPackage.cpp  EnemyDisconnectedPackage.h  GameReadyPackage.cpp  GameReadyPackage.h  NetworkCommand.h  NetworkInterface.cpp  NetworkInterface.h  NetworkPackage.h  NetworkPackageManager.cpp  NetworkPackageManager.h  PlayerJoinAnswerCommand.cpp  PlayerJoinAnswerCommand.h  PlayerJoinAnswerPackage.cpp  PlayerJoinAnswerPackage.h  PlayerJoinCommand.cpp  PlayerJoinCommand.h  PlayerJoinPackage.cpp  PlayerJoinPackage.h  PlayerNetworkCommand.cpp  PlayerNetworkCommand.h  PlayerNetworkPackage.cpp  PlayerNetworkPackage.h  PlayerReadyPackage.cpp  PlayerReadyPackage.h  SendShipsPackage.cpp  SendShipsPackage.h  ShipPlacementPackage.cpp  ShipPlacementPackage.h  TurnPackage.cpp  TurnPackage.h  TurnRequestPackage.cpp  TurnRequestPackage.h
src/common/state-machine/: StateMachine.h
src/gtk-client/: Client.cpp  Client.h  ConnectDialog.cpp  ConnectDialog.h  MainWindow.cpp  MainWindow.h  MenuBar.cpp  MenuBar.h  gui-design.glade  gui.gresource.xml  main.cpp
src/server/: BattleField.cpp  BattleField.h  BattleShipServer.cpp  BattleShipServer.h  Connection.cpp  Connection.h  ConnectionServer.cpp  ConnectionServer.h  Field.cpp  Field.h  GameServer.cpp  GameServer.h  GameServerConfiguration.cpp  GameServerConfiguration.h  GameServerUtil.h  LogConfig.h  Options.cpp  Options.h  Player.cpp  Player.h  PlayerNetworkPackage.cpp  PlayerNetworkPackage.h  Ship.cpp  Ship.h  main.cpp  position.h
src/simple-client/: Player.h  ServerNetworkPackage.h  SimpleClient.cpp  SimpleClient.h  main.cpp
src/test/: BattleFieldTest.cpp  BattleFieldTest.h  FieldTest.cpp  FieldTest.h  NetworkInterfaceTest.cpp  NetworkInterfaceTest.h  NetworkPackageManagerTest.cpp  NetworkPackageManagerTest.h  ShipTest.cpp  ShipTest.h  ShipTest.h_disabled  StateMachineTest.cpp  StateMachineTest.h  main.cpp
src/text-client/: Options.cpp  Options.h  ServerNetworkPackage.h  SimpleClient.cpp  SimpleClient.h  TextClient.cpp  TextClient.h  main.cpp
